# Petrichor-Testbed

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
game/: CMakeLists.txt
game/src/: main.cpp
petrichor/: CMakeLists.txt
petrichor/include/app/: app.h
petrichor/include/common/: WindowTypes.h
petrichor/include/events/: event.h  event_queue.h
petrichor/include/graphics/: renderer.h  window.h
petrichor/include/platform/: imgui.h  platform.h
petrichor/include/platform/win32/: win32_internal.h
petrichor/include/renderer/opengl/: gl_internal.h
petrichor/src/app/: app.cpp
petrichor/src/debug/: debug_ui.cpp  debug_ui.h
petrichor/src/events/: event.cpp
petrichor/src/graphics/: renderer.cpp
petrichor/src/platform/win32/: gl.cpp  window.cpp
petrichor/src/renderer/opengl/: renderer_opengl.cpp  renderer_opengl.h
petrichor/vendors/: CMakeLists.txt
petrichor/vendors/glad/: CMakeLists.txt
petrichor/vendors/glad/include/glad/: glad.h
petrichor/vendors/glad/src/: glad.c
